- Fix alignment with vertical scroll - Bump version

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -276,10 +276,6 @@
             .cell-1-1 {
                 flex: 1 0 auto;
             }
-
-            table {
-                width: 100%;
-            }
         }
 
         &:not(.dash-list-view) {
